2006-12-05       Gaius Mulley <gaius@gnu.org>

        * gm2/gm2-compiler/M2Quads.mod:  BuildCastFunction allow arrays
          to be cast.
	* testsuite/gm2/iso/stringchar.mod:  fixed typos.
	* gm2/gm2-compiler/M2Quads.mod:  BuildDynamicArray,
	  BuildStaticArray, BuildDesignatorArray all SkipType to allow
	  type equivalence between arrays.

2006-11-02       Gaius Mulley <gaius@gnu.org>

	* gm2/lang-specs.h:  use gm2cc rather than the gcc driver.
	* gm2/gm2-compiler/gm2lcc.mod:  also use gm2cc rather
	  than gcc.
	* gm2/gm2-compiler/gm2lcc.mod:  corrected extern
	  declaration of exit.
	* gm2/Make-lang.in:  generate gm2cc from xgcc and install
          it correcly.
        * testsuite/gm2/pim/options/optimize/run/pass/gm2.exp: fixed
          library module build.

2006-10-20       Gaius Mulley <gaius@gnu.org>

	* gm2/gccgm2.c:  fixed building of constants strings.
	  Constants are also placed into the global scope so
	  that they are not garbage collected.
	* gm2/M2GenGCC.mod:  CodeXIndr handle special case of
	  null string.
	* gm2/Make-lang.in:  add automatically generated modules
	  to the verify12 rule.
	* added a string assignment regression test.

2006-10-19       Gaius Mulley <gaius@gnu.org>

	* www/index.ms:  updated gm2-harness release to 0.96.
	* gm2/gm2-compiler/SymbolConversion.mod:   Poison must
	  not check for gcc poisoning as it is called after a
	  function has been emitted and potentially poisoned.

2006-10-18       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-config.in:  added.
	* gm2/Make-lang.in:  include gm2/gm2-config.
	* gm2/configure.in:  generate gm2/gm2-config.
	* backed out above changes

2006-10-17       Gaius Mulley <gaius@gnu.org>

	* gm2/aclocal.m4:  added.
	* gm2/configure:  rebuilt.

2006-10-14       Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  minor fixes to build manual pages.

2006-10-13       Gaius Mulley <gaius@gnu.org>

	* gm2/gccgm2.c:  call gimplify_function on all
          functions.