@@ -1,3 +1,8 @@
+2006-12-17       Gaius Mulley <gaius@gnu.org>
+
+	* fixed line number debugging information at the end of a
+	  function.
+
 2006-12-05       Gaius Mulley <gaius@gnu.org>
 
         * gm2/gm2-compiler/M2Quads.mod:  BuildCastFunction allow arrays
